# Object-Detection-Tflite-ESP32-S3-EYE

./: README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  detection_responder.cc  detection_responder.h  idf_component.yml  main_functions.cc  model_settings.cc  model_settings.h  object_detection_model_data.cc  object_detection_model_data.h
